# snowflake-cli-templates

./: .pre-commit-config.yaml  README.md
.github/: CODEOWNERS  repo_meta.yml
.tests/: test_V2_definition_has_cli_version_limit.py  test_examples.py  test_render_templates.py  test_snowpark_examples.py
app_basic/: README.md  snowflake.yml
app_spcs_basic/: README.md  build-and-push.sh  snowflake.yml  template.yml
app_streamlit_java/: README.md  snowflake.yml  template.yml
app_streamlit_js/: README.md  snowflake.yml  template.yml
app_streamlit_python/: README.md  local_test_env.yml  snowflake.yml  template.yml
data_project/: .gitlab-ci.yml  README.md  manifest.yml  snowflake.yml  template.yml
dcm_project/: .gitignore  README.md  manifest.yml  snowflake.yml  template.yml
default_snowpark/: snowflake.yml  template.yml
default_streamlit/: snowflake.yml  template.yml
example_plugin/: README.md  pyproject.toml  template.yml
example_plugin/src/snowflake_cli_example_plugin/: commands.py  manager.py  plugin_spec.py
example_snowpark/: snowflake.yml  template.yml
example_streamlit/: snowflake.yml  template.yml
sfguide/: README.md  template.yml
snowpark_with_external_access/: README.md  setup.sql  snowflake.yml  template.yml
streamlit_vnext_multi_page/: pyproject.toml  snowflake.yml  streamlit_app.py  template.yml
streamlit_vnext_multi_page/app_pages/: example_page.py  home_page.py
streamlit_vnext_multi_page/common/: snowflake_connection.py  ui.py
streamlit_vnext_single_page/: README.md  snowflake.yml  streamlit_app.py  template.yml
(+54 files in other folders)
